# covtrim

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  build.sh  meta.yaml  post-link.sh  pyproject.toml  setup.cfg  setup.py
covtrim/: covtrim_main.py
example/: FAV29196_barcode01_e6e45773_e63dc735_1.fastq
src/covtrim/: covtrim.py
