[build-system]
requires = ["setuptools", "wheel", "poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "covtrim"
version = "0.1.0"
description = "CovTrim is a specialized bioinformatics tool designed for precise coverage-based downsampling of FASTQ files from amplicon sequencing data."
authors = ["Gurasis Osahan <gurasis.osahan@phac-aspc.gc.ca>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/phac-nml/covtrim"
repository = "https://github.com/phac-nml/covtrim"
documentation = "https://github.com/phac-nml/covtrim/blob/main/README.md"
keywords = ["bioinformatics", "genomics", "NGS", "pipeline", "amplicon", "nanopore", "coverage", "fastq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pysam = ">=0.20.0"
numpy = "1.24.3"
pandas = "1.5.3"
# Add other dependencies from setup.py if necessary

[tool.poetry.dev-dependencies]
pytest = { version = "^6.2.5", python = ">=3.9,<3.11" }
coverage = "^5.5"

[build]
script = ["covtrim=covtrim.covtrim_main:main"]

[tool.poetry.scripts]
covtrim = "covtrim.covtrim_main:main"
