[metadata]
name = covtrim
version = 0.1.0
author = Gurasis Osahan
author_email = gurasis.osahan@phac-aspc.gc.ca
description = CovTrim is a specialized bioinformatics tool designed for precise coverage-based downsampling of FASTQ files from amplicon sequencing data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/phac-nml/covtrim
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.10
[options]
packages = find:
install_requires =
    pysam
    numpy
    scipy
    pandas
python_requires = <3.11

[options.entry_points]
console_scripts =
    covtrim = covtrim.covtrim:main

[options.package_data]
covtrim = data/*.txt

[options.extras_require]
test =
    pytest
    coverage

[options.packages.find]
exclude =
    tests
