[metadata]
name = covtrim
version = 0.1.0
author = Gurasis Osahan
author_email = gurasis.osahan@phac-aspc.gc.ca
description = CovTrim is a specialized bioinformatics tool designed for precise coverage-based downsampling of FASTQ files from amplicon sequencing data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/phac-nml/covtrim
project_urls =
    Documentation = https://github.com/phac-nml/covtrim/blob/main/README.md
    Source Code = https://github.com/phac-nml/covtrim
    Bug Tracker = https://github.com/phac-nml/covtrim/issues
    FAQ = https://github.com/phac-nml/covtrim/wiki/FAQ
license = Apache License 2.0
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    bioinformatics
    genomics
    NGS
    pipeline
    amplicon
    coverage
    fastq
    sequencing

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.7,<3.11
install_requires =
    pysam>=0.22.0,<0.23.0
    numpy>=1.21.2,<2.0.0
    scipy>=1.7.1,<2.0.0
    pandas>=1.3.3,<2.0.0

[options.entry_points]
console_scripts =
    covtrim = covtrim.covtrim:main

[options.extras_require]
test =
    pytest
    coverage

[options.packages.find]
exclude =
    tests
